vue sample update